# Pico_W_TCP_SERVER_2_i2S

./: .gitignore  audio.raw
samples/sine_wave_i2s_32b/: CMakeLists.txt  README.md  main.cpp  project_audio.cpp  project_audio.h  ringbuf.c  ringbuf.h  run.sh  run2.sh  tcp_server.c  tcp_server.h
